# src/contract/model/vehicleDetailsDtoListApiResponse.ts
@@ -1,0 +1,16 @@
+/**
+ * EV Rental API
+ *
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { VehicleDetailsDto } from './vehicleDetailsDto';
+
+export interface VehicleDetailsDtoListApiResponse {
+  isSuccess?: boolean;
+  data?: Array<VehicleDetailsDto> | null;
+  message?: string | null;
+}
